# exboard

./: JetsonOrinNANO.stl  README.md  pyproject.toml  setup.py
src/exboard/: __init__.py  aibox.py  jetson.py  rk3390.py
src/exboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
